:sparkles: Feat: member.role(USER/ADMIN) 기반 API 권한 분리 적용
배치/운영 API(/api/v1/batch/**)는 ADMIN 만, 그 외 로그인 필요 API 는 USER 이상만
쓰도록 SecurityConfig 를 hasRole 기반으로 바꿨다. JwtAuthenticationProvider 가
member.role(ERole: USER/ADMIN) 을 GrantedAuthority 로 변환해 인증 토큰에 실어주는데,
ADMIN 계정도 일반 앱 기능을 그대로 써야 하므로 ROLE_ADMIN 계정에는 ROLE_USER 도
함께 부여한다. ERole 은 gatchaz 도메인과 안 맞고 어디서도 쓰이지 않던 기존 값들
(PM/HD_USER/AQD_USER/BOTH_USER/GUEST/WITHDRAWN)을 정리하고 USER/ADMIN 두 값으로
다시 정의했다. member 테이블에는 role 컬럼이 없어 별도로 로컬 마이그레이션 SQL을
준비해뒀다(이 커밋에는 포함하지 않음).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01W3dQ1GhyV9Xy1Qhik9M73E